Fixed problem with touch events not firing on mobile pointer: cursor css hack to make react components fire touch events on mobile

--- a/meteor-app/meteor101survey/client/app.css
+++ b/meteor-app/meteor101survey/client/app.css
@@ -9,6 +9,7 @@ li.question {
 
 li.choice, li.chosen {
   padding-left: 1.3em ;
+  cursor: pointer;
 }
 
 li.choice:before {
